rust/crates/proj/src/functions/iso19111/snapshots/proj__functions__iso19111__context_advanced__test_context_advanced__create_cs.snap
---
source: crates/proj/src/functions/iso19111/context_advanced.rs
expression: wkt_string
---
CS[Cartesian,2],
    AXIS["longitude",north,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",northNorthEast,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",northEast,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",eastNorthEast,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",east,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",eastSouthEast,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",southEast,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",southSouthEast,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",south,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",southSouthWest,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",southWest,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",westSouthWest,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",west,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",westNorthWest,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",northWest,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",northNorthWest,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",up,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",down,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["(lon)",geocentricX,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["(lon)",geocentricY,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["(lon)",geocentricZ,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",columnPositive,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",columnNegative,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",rowPositive,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",rowNegative,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",displayRight,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",displayLeft,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",displayUp,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",displayDown,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",forward,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",aft,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",port,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",starboard,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",clockwise,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",counterClockwise,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",towards,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",awayFrom,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",future,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",past,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]CS[Cartesian,2],
    AXIS["longitude",unspecified,
        ORDER[1],
        ANGLEUNIT["unit1",1]],
    AXIS["latitude",north,
        ORDER[2],
        ANGLEUNIT["unit1",1]]
