rust/crates/proj/src/functions/iso19111/snapshots/proj__functions__iso19111__context_advanced__test_context_advanced__create_ellipsoidal_2d_cs.snap
---
source: crates/proj/src/functions/iso19111/context_advanced.rs
expression: wkt
---
CS[ellipsoidal,2],
    AXIS["latitude",north,
        ORDER[1],
        ANGLEUNIT["degree",0.0174532925199433,
            ID["EPSG",9122]]],
    AXIS["longitude",east,
        ORDER[2],
        ANGLEUNIT["degree",0.0174532925199433,
            ID["EPSG",9122]]]
