rust/crates/proj/src/functions/iso19111/snapshots/proj__functions__iso19111__context_advanced__test_context_advanced__create_geocentric_crs_from_datum.snap
---
source: crates/proj/src/functions/iso19111/context_advanced.rs
expression: wkt
---
GEODCRS["new crs",
    DATUM["World Geodetic System 1984",
        ELLIPSOID["WGS 84",6378137,298.257223563,
            LENGTHUNIT["metre",1,
                ID["EPSG",9001]]]],
    PRIMEM["Greenwich",0,
        ANGLEUNIT["MyDegree",0.0174532925199433]],
    CS[Cartesian,3],
        AXIS["(X)",geocentricX,
            ORDER[1],
            LENGTHUNIT["MyMetre2",1]],
        AXIS["(Y)",geocentricY,
            ORDER[2],
            LENGTHUNIT["MyMetre2",1]],
        AXIS["(Z)",geocentricZ,
            ORDER[3],
            LENGTHUNIT["MyMetre2",1]]]
