rust/crates/proj/src/functions/iso19111/snapshots/proj__functions__iso19111__context_advanced__test_context_advanced__create_transformation.snap
---
source: crates/proj/src/functions/iso19111/context_advanced.rs
expression: wkt
---
COORDINATEOPERATION["transf",
    SOURCECRS[
        GEOGCRS["foo crs",
            DATUM["World Geodetic System 1984",
                ELLIPSOID["foo ellips",6378137,298.257223563,
                    LENGTHUNIT["metre",1]]],
            PRIMEM["Greenwich",0,
                ANGLEUNIT["foo units",0.0174532925199433]],
            CS[ellipsoidal,2],
                AXIS["longitude",east,
                    ORDER[1],
                    ANGLEUNIT["degree",0.0174532925199433]],
                AXIS["latitude",north,
                    ORDER[2],
                    ANGLEUNIT["degree",0.0174532925199433]]]],
    TARGETCRS[
        GEOGCRS["bar crs",
            DATUM["World Geodetic System 1984",
                ELLIPSOID["bar ellips",6378137,298.257223563,
                    LENGTHUNIT["metre",1]]],
            PRIMEM["foo meridian",0,
                ANGLEUNIT["bar unit",0.0174532925199433]],
            CS[ellipsoidal,2],
                AXIS["longitude",east,
                    ORDER[1],
                    ANGLEUNIT["degree",0.0174532925199433]],
                AXIS["latitude",north,
                    ORDER[2],
                    ANGLEUNIT["degree",0.0174532925199433]]]],
    METHOD["foobar method",
        ID["foobar auth","foobar code"]],
    PARAMETER["foobarbar name",0.3,
        SCALEUNIT["foobarbar unit",2],
        ID["foobarbar auth","foobarbar code"]],
    INTERPOLATIONCRS[
        GEOGCRS["bar crs",
            DATUM["World Geodetic System 1984",
                ELLIPSOID["bar ellips",6378137,298.257223563,
                    LENGTHUNIT["metre",1]]],
            PRIMEM["foo meridian",0,
                ANGLEUNIT["bar unit",0.0174532925199433]],
            CS[ellipsoidal,2],
                AXIS["longitude",east,
                    ORDER[1],
                    ANGLEUNIT["degree",0.0174532925199433]],
                AXIS["latitude",north,
                    ORDER[2],
                    ANGLEUNIT["degree",0.0174532925199433]]]],
    OPERATIONACCURACY[0],
    ID["transf auth","conv code"]]
